changed bp-navbar to show bp-overflow only when there are more than 3 bp-actions

--- a/demo/directives/navbar.html
+++ b/demo/directives/navbar.html
@@ -7,6 +7,11 @@
 <bp-navbar bp-navbar-title=''>
   <bp-action ng-click class="bp-icon fa-repeat">Reload</bp-action>
 </bp-navbar>
+<bp-navbar bp-navbar-title='Three icons'>
+  <bp-action ng-click class="fa-bookmark">First</bp-action>
+  <bp-action ng-click class="fa-comment">Second</bp-action>
+  <bp-action ng-click class="fa-download">Third</bp-action>
+</bp-navbar>
 <bp-navbar bp-navbar-title='Spawn Toolbar'>
   <bp-action ng-click class="fa-bookmark">First</bp-action>
   <bp-action ng-click class="fa-comment">Second</bp-action>
